<resources>
    <string name="app_name">NSRT Recipes</string>
    <string name="app_name_main">Prices | New Shree Raj Traders</string>
    <string name="view_design_list">Add new price for an item</string>
    <string name="list_style">Add Price</string>
    <string name="grid_style">Price List</string>
    <string name="view_design_grid">CP and SP information</string>
    <string name="copyright_aldiee">Copyright © 2019 | Asvi</string>
    <string name="app_name_grid">List of Prices</string>
    <string name="app_name_list">Price Information</string>
    <string name="president_of">President of</string>
    <string name="president_name">Naure Kaori</string>
    <string name="presiden_birth">May 19, 1997</string>
    <string name="rate">2/5</string>
    <string name="app_name_detail">Detail of Price</string>
    <string name="about">About, President of</string>
    <string name="description">Assuming you are finishing the login screen when the user logs in and home is created and afterwards all the screens from 1 to 5 on top of that one. The code i posted will return you to home screen finishing all the other activites. You can add an extra in the from there or something).</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="two_dot">:</string>
    <string name="periode">Presidential term</string>
    <string name="dua">2</string>
    <string name="leadership">Leadership</string>
    <string name="vote">Vote</string>
    <string name="firmness">Firmness</string>
    <string name="decision">Decision</string>
    <string name="releated">Releated President</string>
    <string name="submit">Submit</string>
    <string name="cp">CP</string>
    <string name="sp">SP</string>
</resources>
