<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context="com.aldieemaulana.president.activity.ListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.NoActionBar"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:weightSum="1"
            app:contentInsetStart="@null"
            app:elevation="0dp">

            <ImageButton
                android:id="@+id/buttonLeft"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:background="@drawable/button_back"
                android:padding="3dp"
                android:scaleType="fitEnd"
                android:src="@drawable/ic_chevron_left_white_24dp" />

            <TextView
                android:id="@+id/title"
                fontPath="fonts/latoRegular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name_detail"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_navbar_title"
                tools:ignore="MissingPrefix" />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedListview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/russian" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/item_name"
                    fontPath="fonts/latoLight.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/component_bottom_medium"
                    android:text="@string/about"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_small"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight=".38"
                        android:text="@string/cp"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_small"
                        android:text="@string/two_dot"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/cp"
                        fontPath="fonts/latoRegular.ttf"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight=".7"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_small"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight=".38"
                        android:text="@string/sp"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_small"
                        android:text="@string/two_dot"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/sp"
                        fontPath="fonts/latoRegular.ttf"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight=".7"
                        android:text="@string/periode"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                </LinearLayout>

                <Button
                    android:id="@+id/edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccentActive"
                    android:text="Edit"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorRed"
                    android:text="Delete"
                    android:textColor="@color/colorWhite" />


            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>